--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__sign-out/header__sign-out.css);
+
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__error/login__error.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__login-link/login__login-link.css);
+@import url(./blocks/login/__signin/login__signin.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__name/profile__name.css);
@@ -49,3 +58,7 @@
 @import url(./blocks/popup/__form-field/_invalid/popup__form-field_invalid.css);
 @import url(./blocks/popup/__form-error/popup__form-error.css);
 @import url(./blocks/popup/__form-error/_hidden/popup__form-error_hidden.css);
+@import url(./blocks/popup/__message/popup__message.css);
+@import url(./blocks/popup/__message/_type/popup__message_type_success.css);
+@import url(./blocks/popup/__message/_type/popup__message_type_unsuccess.css);
+@import url(./blocks/popup/__message-title/popup__message-title.css);
