--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,10 @@
   padding: 28px 0 31px 0;
   margin: 0 auto;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
   .header {
