--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,5 +3,5 @@
     background-color: #000;
     color: #fff;
     font-family: "Inter", Arial, sans-serif;
-    height: 100vh;
+    min-height: 100vh;
 }
